# dynamic-obstacle-prediction

./: CMakeLists.txt  ObstaclePredictor.cpp  ObstaclePredictor.h  ObstaclePredictorNode.cpp  README.md  obstacle_predictor.launch  obstacle_predictor.yaml  package.xml
config/: obstacle_predictor.yaml
include/: ObstaclePredictor.h
launch/: obstacle_predictor.launch
src/: ObstaclePredictor.cpp  ObstaclePredictorNode.cpp
