<?xml version="1.0"?>
<package format="2">
  <name>dynamic_obstacle_prediction</name>
  <version>1.0.0</version>
  <description>
    Dynamic obstacle detection and tracking with adaptive noise filtering
    for mobile robot navigation. Combines LiDAR and camera sensor fusion
    with context-aware velocity estimation.
  </description>

  <maintainer email="pranavchintalapudi@gmail.com">Pranav Chintalapudi</maintainer>
  <license>Proprietary</license>
  <author email="pranavchintalapudi@gmail.com">Pranav Chintalapudi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>eigen</depend>

  <export>
  </export>
</package>